--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,2 +1,12 @@
-<h1>Home#top</h1>
-<p>Find me in app/views/home/top.html.erb</p>
+<header>
+  <div class="header-logo">
+    view
+  </div>
+</header>
+
+<div class="main top-main">
+  <div class="top-message">
+    <h2>タイトル</h2>
+    <p>本文</p>
+  </div>
+</div>
