--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,18 +4,21 @@
   </div>
   <ul class="header-menus">
     <li>
-      <a href="/about">TweetAppとは</a>
+      <a href="/">HOME</a>
     </li>
   </ul>
 </header>
 
+<% posts1 = "よー！" %>
+<% posts2 = "ページ作成中！" %>
+
 <div class="main posts-index">
   <div class="container">
     <div class="posts-index-item">
-      よー！
+      <%= posts1 %>
     </div>
     <div class="posts-index-item">
-      ページ作成中！
+      <%= posts2 %>
     </div>
   </div>
 </div>
